# CovidMutation

./: .gitignore  README.md  codon.txt  old.py  old2.py  parts.py
Partitionen/: Partitionen.tex  sources.bib
dna/: Cargo.toml
dna/src/: main.rs  new.rs  old.rs.rs  partition.rs  polynomial.rs
python/: interactive.py  main.py  numeric.py  partitions_but_correct.py  poly.py
src/: main.rs  mat.rs  partitions.rs
