[package]
name = "dna"
version = "0.1.0"
authors = ["sv-97"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rand = { version = "0.8.3", features = ["small_rng"] }
rand_xoshiro = "0.6"
static_init = "1"

[profile.release]
debug = 1
lto = true
codegen-units = 1
